--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 							<i class="fa fa-flask fa-5x mar-bot20"></i>
 							<h2 class="slogan">Welcome to Amoeba</h2>
 							<p>
-							Lorem ipsum dolor sit amet, natum bonorum expetendis usu ut.
+							Lorem bob ipsum dolor sit amet, natum bonorum expetendis usu ut.
 							Eum impetus offendit disputationi eu, at vim aliquip lucilius praesent.
 							Alia laudem antiopam te ius, sed ad munere integre, ubique facete sapientem nam ut.
 
