Fix small screen rendering and remove console errors

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 											<img src="img/cdmx.jpeg" class="smallImage"/>
 											<p>Buenos</p>
 										</div>
-										<div class="learnMore">
+										<div class="learnMore textRight">
 											<h2 class="learnMoreTitle">Learn More & Contact</h2>
 											<ul>
 												<li class="learnMoreLi">Nunc velit risus, dapibus non interdum quis, suscipit nec dolor. Vivamus tempor tempus mauris vitae fermentum. In vitae nulla lacus.</li>
@@ -184,7 +184,7 @@
 		<div class="container">
 			<div class="row">
 					<div class="col-lg-12">
-							<div class="align-center">	
+							<div class="align-center imageContainer">	
 										<div class="learnMore">
 											<h2 class="learnMoreTitle">Summer Programming</h2>
 											<p class="leftAlign">unc velit risus, dapibus non interdum quis</p>
@@ -273,7 +273,6 @@
     <script src="js/bootstrap.min.js"></script>
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASm3CwaK9qtcZEWYa-iQwHaGi3gcosAJc&sensor=false"></script>
 	<script src="js/jquery.isotope.min.js"></script>
-	<script src="js/jquery.nicescroll.min.js"></script>
 	<script src="js/fancybox/jquery.fancybox.pack.js"></script>
 	<script src="js/skrollr.min.js"></script>
 	<script src="js/jquery.scrollTo-1.4.3.1-min.js"></script>
