--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 		</section>
 
 		<!-- spacer section:stats -->
-		<section id="parallax1" class="section pad-top40 pad-bot40" data-stellar-background-ratio="0.5">
+		<!-- <section id="parallax1" class="section pad-top40 pad-bot40" data-stellar-background-ratio="0.5">
 			<div class="container">
             <div class="align-center pad-top40 pad-bot40">
                 <blockquote class="bigquote color-white">Indoctum accusamus comprehensam</blockquote>
@@ -243,7 +243,7 @@
                 <blockquote class="bigquote color-white">Indoctum accusamus comprehensam</blockquote>
 				<p class="color-white">Bootstraptaste</p>
             </div>
-		</section>
+		</section> -->
 
 	<section id="footer" class="section footer">
 		<div class="container">
