Add imageContainer to reserve your spot

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 		<div class="container">
 			<div class="row">
 					<div class="col-lg-12">
-							<div class="align-center">
+							<div class="align-center imageContainer">
 										<div class="blackContainer">
 											<h2 class="blackTitle">Reserve Your Spot</h2>
 											<p class="leftAlign">Nunc velit risus, dapibus non interdum quis, suscipit nec dolor. Vivamus tempor tempus mauris vitae fermentum. In vitae nulla lacus. Nunc velit risus, dapibus non interdum quis, suscipit nec dolor. Vivamus tempor tempus mauris vitae fermentum. In vitae nulla lacus.</p>
