Collapse nav after making selection

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 		<div class="navbar navbar-fixed-top" id="navWrapper" role="navigation" data-0="line-height:100px; height:100px; background-color:rgba(0,0,0,0.3);" data-300="line-height:60px; height:60px; background-color:rgba(0,0,0,1);">
 			 <div class="container" id="containerWrapper">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+					<button id="Hamburger" type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
 						<span class="fa fa-bars color-white"></span>
 					</button>
 					<h1><a class="navbar-brand" href="index.html" data-0="line-height:90px;" data-300="line-height:50px;">
 					</a></h1>
 				</div>
-				<div class="navbar-collapse collapse">
+				<div class="navbar-collapse collapse" id="dropdownNavBar">
 					<ul class="nav navbar-nav" id="navUl" data-0="margin-top:20px;" data-300="margin-top:5px;">
 						<li class="active"><a href="index.html">Home</a></li>
 						<li><a class="navButton" id="learnMoreNav">Learn More & Contact</a></li>
