remove active from home li

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</div>
 				<div class="navbar-collapse collapse" id="dropdownNavBar">
 					<ul class="nav navbar-nav" id="navUl" data-0="margin-top:20px;" data-300="margin-top:5px;">
-						<li class="active"><a href="index.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a class="navButton" id="learnMoreNav">Learn More & Contact</a></li>
 						<li><a class="navButton" id="aboutNav">About & Bio</a></li>
 						<li><a class="navButton" id="testimonialsNav">Testimonials</a></li>
